Fix ResponsiveImage loading layout thrash

--- a/src/components/ResponsiveImage/ResponsiveImage.css
+++ b/src/components/ResponsiveImage/ResponsiveImage.css
@@ -1,4 +1,7 @@
-.ResponsiveImage {
+.ResponsiveImage__wrapper {}
+
+.ResponsiveImage__img {
+  position: absolute;
   width: 100%;
   height: auto;
 }
