--- a/src/components/HeroOverlay/HeroOverlay.css
+++ b/src/components/HeroOverlay/HeroOverlay.css
@@ -44,12 +44,13 @@ TODO: fix this to be more generic */
   }
 }
 
-/*  GO FULL WIDTH BELOW 820 PIXELS */
-@media only screen and (max-width: 820px) {
+/*  GO FULL WIDTH fOR MOBILE BREAKPOINT*/
+@media only screen and (max-width: 52rem) {
   .HeroOverlay__research, .HeroOverlay__credo {
     position: relative;
     width: 100%;
     margin: 16px 0 0 0;
+    top: 0;
     left: 0;
     right: 0;
     bottom: 0;
