--- a/src/components/Statement/Statement.css
+++ b/src/components/Statement/Statement.css
@@ -1,41 +1,41 @@
-.Credo p {
+.Statement p {
   margin-bottom: 1rem;
 }
 
-.Credo ol {
+.Statement ol {
   list-style-position: outside;
   margin: 0 3.75rem;
 }
 
-.Credo ol li {
+.Statement ol li {
   padding-left: 1rem;
   margin-bottom: 1rem;
 }
 
-.Credo__img {
+.Statement__img {
   padding-bottom: 0.5rem;
 }
 
-.Credo__img--left {
+.Statement__img--left {
   float: left;
   padding-right: 1rem;
 }
 
-.Credo__img--right {
+.Statement__img--right {
   float: right;
   padding-left: 1rem;
 }
 
-.Credo__img--portrait {
+.Statement__img--portrait {
   max-width: 200px;
 }
 
-.Credo__img--landscape {
+.Statement__img--landscape {
   max-width: 300px;
 }
 
 @media only screen and (max-width: 42rem) {
-  .Credo__img {
+  .Statement__img {
     display: block;
     text-align: center;
     float: none;
@@ -43,12 +43,12 @@
     padding: 0.25rem 0 1rem 0;
   }
 
-  .Credo ol {
+  .Statement ol {
     list-style-position: outside;
     margin: 0 2rem;
   }
 
-  .Credo ol li {
+  .Statement ol li {
     padding-left: 0.75rem;
     margin-bottom: 0.75rem;
   }
