--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,12 +8,7 @@ body {
 
 a {
   text-decoration: none;
-  color: black;
-}
-
-a:active, a:visited {
-  text-decoration: none;
-  color: black;
+  color: #3498db;
 }
 
 h3 {
