Disable hover menu effects for devices that support touch

--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -49,7 +49,7 @@
   width: 100%;
 }
 
-.ContactForm button:hover {
+.no-touch .ContactForm button:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
