--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -14,7 +14,7 @@
   margin-top: 0.5rem;
 }
 
-.About__summary__linkedin:hover {
+.no-touch .About__summary__linkedin:hover {
   color: #3498db;
   text-decoration: underline;
 }
