--- a/src/components/InfoBlock/InfoBlock.css
+++ b/src/components/InfoBlock/InfoBlock.css
@@ -3,7 +3,7 @@
   font-size: 0.9rem;
 }
 
-.InfoBlock a:hover {
+.no-touch .InfoBlock a:hover {
   color: #3498db;
   text-decoration: underline;
 }
