--- a/src/components/ResearchPaperSection/ResearchPaperSection.css
+++ b/src/components/ResearchPaperSection/ResearchPaperSection.css
@@ -21,6 +21,6 @@
   text-decoration: underline;
 }
 
-.ResearchPaperSection__url:hover {
+.no-touch .ResearchPaperSection__url:hover {
   font-weight: normal;
 }
